--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,7 +25,7 @@
   footer {
     align-self: stretch;
 
-    &.empty{
+    &.empty .progress {
       opacity: 0.5;
     }
   }
@@ -41,7 +41,7 @@
   strong {
     display: block;
     margin-top: 2rem;
-    font: 600 1.25rem Lexend,sans-serif;
+    font: 600 1.25rem Lexend, sans-serif;
     line-height: 1.75rem;
   }
 
@@ -58,7 +58,13 @@
   height: 20rem;
   border: 1.5px dashed var(--purple-300);
   border-radius: 1.5rem;
-  background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8), 0%, rgba(0, 0, 0, 0), 100%);
+  background: linear-gradient(
+    143.8deg,
+    rgba(145, 100, 250, 0.8),
+    0%,
+    rgba(0, 0, 0, 0),
+    100%
+  );
 
   padding: 4rem;
   text-align: center;
@@ -82,7 +88,7 @@
 
   .slider {
     flex: 1;
-    
+
     .emptySlider {
       width: 100%;
       height: 4px;
@@ -109,10 +115,20 @@
 
     &:disabled {
       cursor: default;
+      opacity: 0.5;
     }
 
     &:hover:not(:disabled) {
       filter: brightness(0.7);
+    }
+
+    &.isActive {
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+    }
+
+    &.isActive:hover {
+      filter: brightness(0.6) invert(0.35) sepia(1) saturate(3)
+        hue-rotate(100deg);
     }
 
     &.playButton {
